--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,33 +1,28 @@
-
-
-.header{
+.header {
   display: flex;
   padding: 10px 30px 10px 30px;
   align-items: center;
   position: fixed;
   top: 0;
   left: 0;
-  right: 0 ;
+  right: 0;
   justify-content: space-between;
 }
 
 .header > h1 {
   font-size: 28px;
   cursor: pointer;
-  &:hover{
+  &:hover {
     scale: 1.1;
     transition: all 0.3s ease-in;
   }
 }
 
-
-
-.menu{
+.menu {
   display: flex;
   align-items: center;
   gap: 25px;
 }
-
 
 .menu > li {
   list-style-type: none;
@@ -39,4 +34,17 @@
   font-weight: 600;
   color: currentColor;
   cursor: pointer;
+}
+
+.menu > li > a::after {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #41a066;
+  display: block;
+  transition: all 0.4s ease-in;
+}
+
+.menu > li > a:hover:after {
+  width: 100%;
 }
