--- a/src/index.scss
+++ b/src/index.scss
@@ -1,11 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
-
 @tailwind components;
 @tailwind utilities;
 
-
-*{
+* {
   margin: 0;
   padding: 0;
 }
@@ -19,21 +17,31 @@ html {
   overflow: auto;
 }
 
-body{
-  font-family: "Noto Sans", sans-serif;
+body {
+  font-family: 'Noto Sans', sans-serif;
   color: black;
   transition: all 0.4s ease-in-out;
   background: #ffffff;
 }
 
-.scaleHover{
-  &:hover{
+.hoverAvatar {
+  transition: all 0.4s ease-in-out;
+  cursor: pointer;
+  &:hover {
+    scale: 1.1;
+    filter: saturate(150%);
+    transition: all 0.4s ease-in-out;
+  }
+}
+
+.scaleHover {
+  &:hover {
     scale: 1.2;
     transition: all 0.3s ease-in;
   }
 }
 
-.darkTheme{
+.darkTheme {
   color: white;
   transition: all 0.4s ease-in-out;
   background: #222;
@@ -63,7 +71,12 @@ body{
   width: 100%;
   height: 80px;
   max-width: 80px;
-  background: linear-gradient(90deg, #858d9c 0%, #422b42 40%, rgba(0, 0, 0, 0.28) 60%);
+  background: linear-gradient(
+    90deg,
+    #858d9c 0%,
+    #422b42 40%,
+    rgba(0, 0, 0, 0.28) 60%
+  );
   border-radius: 100%;
   display: flex;
   justify-content: center;
