--- a/src/index.scss
+++ b/src/index.scss
@@ -76,10 +76,10 @@ body {
 }
 
 .scaleHover {
-  transition: all 0.3s ease-in;
+  transition: all 0.2s ease-in;
   &:hover {
     scale: 1.1;
-    transition: all 0.3s ease-in;
+    transition: all 0.2s ease-in;
   }
 }
 
@@ -173,4 +173,67 @@ body {
 .card:hover .icon svg path {
   fill: url('#gradientColor');
   transition: all 0.3s ease;
+}
+
+.hamburger {
+  cursor: pointer;
+  display: none;
+}
+
+.hamburger input {
+  display: none;
+}
+
+.hamburger svg {
+  /* The size of the SVG defines the overall size */
+  height: 3em;
+  /* Define the transition for transforming the SVG */
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line {
+  fill: none;
+  stroke: white;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  /* Define the transition for transforming the Stroke */
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+.hamburger input:checked + svg {
+  transform: rotate(-45deg);
+}
+
+.hamburger input:checked + svg .line-top-bottom {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
+}
+
+@media (max-width: 1070px) {
+  
+  .hamburger {
+    display: block;
+  }
+  .dismida {
+    display: none !important;
+  }
+}
+
+.activeburger{
+    &::before {
+      content: '';
+      position: fixed;
+      top: 58px;
+      bottom: 0;
+      z-index: 2;
+      left: 0;
+      right: 0;
+      background: #422b42;
+    }
 }
