--- a/src/components/About/about.module.scss
+++ b/src/components/About/about.module.scss
@@ -1,9 +1,8 @@
-
-.about{
+.about {
   min-height: 100vh;
+  scroll-snap-align: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  scroll-snap-align: center;
 }
-
