обновил загрузку в компанентах

--- a/src/index.scss
+++ b/src/index.scss
@@ -114,7 +114,7 @@ body {
 
 .icon {
   margin: 0 auto;
-  width: 100%;
+  width: 80px;
   height: 80px;
   max-width: 80px;
   background: linear-gradient(
