--- a/src/index.scss
+++ b/src/index.scss
@@ -112,6 +112,17 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.swiper-scrollbar{
+  background: #333 !important;
+  opacity: 1 !important;
+}
+
+
+
+.swiper-scrollbar-drag{
+  background: #618366 !important;
+}
+
 .icon {
   margin: 0 auto;
   width: 80px;
