--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -37,17 +37,23 @@
   cursor: pointer;
 }
 
-.menu > li > a::after {
-  content: '';
-  width: 0%;
-  height: 2px;
-  background: #41a066;
-  display: block;
-  transition: all 0.4s ease-in;
-}
 
-.menu > li > a:hover:after {
-  width: 100%;
+  .activeMenu{
+    color: #41a066 !important;
+  }
+
+.noActiveMenu {
+  &::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: #41a066;
+    display: block;
+    transition: all 0.4s ease-in;
+  }
+  &:hover::after{
+    width: 100%;
+  }
 }
 
 
