--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -33,6 +33,10 @@
   font-size: 20px;
   text-decoration: none;
   font-weight: 600;
+  &::selection{
+    color: #41a066;
+    background: #356146;
+  }
   color: currentColor;
   cursor: pointer;
 }
